Fixed namespace bug.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,8 @@
+0.0.2 (December 3, 2009)
+* BUGFIX: Namespace error.
+
+0.0.1 (December 3, 2009)
+* BUGFIX: Wrong filename.
+
 0.0.0 (December 3, 2009)
 * Initial release.
