--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.1.1 (July 18, 2010)
+* Tweaked documentation but did not change code.
+
 0.1.0 (July 18, 2010)
 * Added convenience methods for testing middleware based on Rack::Plastic.
 
