--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.1.3 (September 28, 2011)
+* Removed gem dependencies from Rakefile as per current Jeweler standards.
+* Required current Jeweler (>= 1.6.0) to ensure chgd dependency handling.
+* Regenerated part of gemspec.
+
 0.1.2 (February 21, 2011)
 * BUGFIX: process_html test helper was not working in Ruby 1.9.
 * Moved test apps into the examples directory.
