--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
-0.1.3 (September 28, 2011)
-* Removed gem dependencies from Rakefile as per current Jeweler standards.
-* Required current Jeweler (>= 1.6.0) to ensure chgd dependency handling.
-* Regenerated part of gemspec.
+0.1.3 (November 6, 2011)
+* Required current Jeweler (>= 1.6.0).
+* Updated gem dependencies and gemspec to reflect the new Jeweler interface.
+* Made gem dependency versions more robust.
+* Changed the obsoleted "dirb" gem to the new "diffy" gem.
+* Added a cautionary statement in the README about using this gem with Rails HTTP streaming.
 
 0.1.2 (February 21, 2011)
 * BUGFIX: process_html test helper was not working in Ruby 1.9.
